2012-04-07  Bob Halley  <halley@dnspython.org>

	* dns/message.py (from_wire): dns.message.from_wire() now takes
	  an 'ignore_trailing' parameter which defaults to False.  If set
	  to True, then trailing junk will be ignored instead of causing
	  TrailingJunk to be raised.  Thanks to Shane Huntley for
	  contributing the patch.

2011-08-22  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: Added LRUCache.  In this cache implementation,
	  the cache size is limited to a user-specified number of nodes, and
	  when adding a new node to a full cache the least-recently used
	  node is removed.

2011-07-13  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: dns.resolver.override_system_resolver()
  	  overrides the socket module's versions of getaddrinfo(),
	  getnameinfo(), getfqdn(), gethostbyname(), gethostbyname_ex() and
	  gethostbyaddr() with an implementation which uses a dnspython stub
	  resolver instead of the system's stub resolver.  This can be
	  useful in testing situations where you want to control the
	  resolution behavior of python code without having to change the
	  system's resolver settings (e.g. /etc/resolv.conf).
	  dns.resolver.restore_system_resolver() undoes the change.

2011-07-08  Bob Halley  <halley@dnspython.org>

	* dns/ipv4.py: dnspython now provides its own, stricter, versions
	  of IPv4 inet_ntoa() and inet_aton() instead of using the OS's
	  versions.

	* dns/ipv6.py: inet_aton() now bounds checks embedded IPv4 addresses
	  more strictly.  Also, now only dns.exception.SyntaxError can be
	  raised on bad input.

2011-04-05  Bob Halley  <halley@dnspython.org>

	* Old DNSSEC types (KEY, NXT, and SIG) have been removed.

	* Bounds checking of slices in rdata wire processing is now more
	  strict, and bounds errors (e.g. we got less data than was
	  expected) now raise dns.exception.FormError rather than
	  IndexError.

2011-03-28  Bob Halley  <halley@dnspython.org>

	* (Version 1.9.4 released)
